--- a/src/views/secret.pug
+++ b/src/views/secret.pug
@@ -8,7 +8,7 @@ h3 Name:  #{user.name}
 h3 Email:  #{user.email}
 h3 JWT:  #{user.jwt}
 h3
-  a(href="http://test.btcc.com:8000/home") 2fa control
+  a(href=homeUrl) 2fa control
 hr
 
 h3
